[CXF-7206]java9 build is broken since 9-ea+148